<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="#ffecfaff">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_weight="1.2"
    >
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="1.2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/nombre"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_weight="1.8"
            android:background="@color/lightyellow" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint_nombre"
            android:textSize="15dp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:layout_weight="1"
            android:id="@+id/eNombre"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/correo"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_weight="1.8"
            android:background="@color/lightyellow" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint_correo"
            android:textSize="15dp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:id="@+id/eCorreo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/tel"
            android:textSize="15dp"
            android:textColor="@color/blue"
            android:layout_weight="1.8"
            android:background="@color/lightyellow" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/hint_tel"
            android:textSize="15dp"
            android:background="@color/white"
            android:inputType="phone"
            android:layout_weight="1"
            android:id="@+id/eTel"/>
    </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center|left"
        android:layout_margin="0dp"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/hobbies"
                    android:id="@+id/textView2"
                    android:textSize="17dp"
                    android:textColor="@color/red"
                    style="@style/Base.TextAppearance.AppCompat.Small" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deportes"
                    android:id="@+id/checkDeportes"
                    android:textSize="15dp"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cine"
                    android:id="@+id/checkCine"
                    android:textSize="15dp"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lectura"
                    android:id="@+id/checkLectura"
                    android:textSize="15dp"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otros"
                    android:id="@+id/checkOtros"
                    android:textSize="15dp"
                    android:checked="false" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="17dp"
                    android:text="@string/genero"
                    android:id="@+id/textView"

                    android:textColor="@color/red" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textSize="15dp"
                    android:onClick="onRadioButtonClicked"
                    android:id="@+id/rbMasculino"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/femenimo"
                    android:id="@+id/rbFemenino"
                    android:checked="false" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:weightSum="1">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_weight="1.35">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/ciudad"
                    android:textColor="@color/red"
                    android:textSize="17dp"
                    android:id="@+id/textView3"
                    android:textAlignment="center" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sCiudades" />



            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.8"
        android:gravity="left"
        >



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Button">

            <DatePicker
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:id="@+id/datePicker"
                android:background="@color/lightskyblue"
                android:calendarViewShown="false"
                style="@style/Widget.AppCompat.Button.Small" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.6"
        >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton"
            android:textSize="20dp"
            android:background="@color/green"
            android:id="@+id/bOk"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/lightgreen">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/nombre"
                android:id="@+id/tNombre"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/correo"
                android:id="@+id/tCorreo"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:id="@+id/tTelefono"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/hobbies"
                android:id="@+id/tHobbies"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/lightgreen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/city"
                android:id="@+id/tCiudad"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/fecha"
                android:id="@+id/tFecha"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:id="@+id/tGenero"
                android:textSize="15dp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>


</LinearLayout>